--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "require-dev": {
 		"phpunit/phpunit": "~9.0",
         "squizlabs/php_codesniffer": "^3.5",
-        "friendsofphp/php-cs-fixer": "^2.16"
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "nunomaduro/collision": "^4.2"
     },
     "autoload": {
         "psr-4": {
